# hello

./: .gitignore
cpp/01-stl-template/: main.cpp
cpp/constructor/: .gitignore  main.cpp
cpp/constructor-copy/: main.cpp
cpp/debug1/: main.cpp
cpp/exception1/: 01_test_bad_exception.cpp  02_test_good_exception.cpp  03_test_trace_exception.cpp  04_test_inherit_exception.cpp  Makefile  README.md
cpp/exception2/: ClassA.cpp  ClassA.h  Makefile  NullPointerException.cpp  NullPointerException.h  main.cpp
cpp/operator/: main.cpp
cpp/stl-functor/: Makefile
cpp/template-cross-reference/: DvTemporal.h  generic.pro  main.cpp
cs/: README.md
cs/helloWorld/: Makefile  main.cs
java/class-Class/: Makefile  README.md  test.cpp  test.java  test2.cpp  test3.cpp
java/generic/: test.java
java/helloworld/: Makefile  test.java
java2cpp/generic/: DvDate.cpp  DvDate.h  DvDuration.cpp  DvDuration.h  DvTemporal.h  DvTemporal.hpp  Makefile  main.cpp
java2cpp/instanceof/: Makefile  test.java  test3.java
make/cmake/template/: CMakeLists.txt  main.cpp
make/cmake/template-app/: CMakeLists.txt  configure
make/cmake/template-lib/: CMakeLists.txt  README.md  main.cpp
make/cmake/template-xcompile/: CMakeLists.txt  README.md  configure  main.cpp  toolchain.arm.cmake
make/makefile/: 00-order.mk  01-macro.mk  02-parallel.mk
make/scons/template/: SConstruct  main.cpp
make/scons/template-lib/: SConstruct
native-client/: README.md
node/file/: read.js
node/hello-world/: hello-world.js
node/postgresql/: README.md  create-db.js  hello-world.js
node/postgresql/xml/: README.md  drop-db.js  insert-data.js
openehr-core/main/: main.pro  openehr-core.pro  project.pro
openehr-core/main/openehr/lang/: Exception.cpp  Exception.h  Object.cpp  Object.h
openehr-core/main/openehr/rm/: RmObject.cpp  RmObject.h
openehr-core/main/openehr/rm/datatypes/basic/: DataValue.cpp  DataValue.h
openehr-core/main/rm/: RmObject.cpp  RmObject.h
openehr-core/main/rm/datatypes/basic/: DataValue.cpp  DataValue.h
openehr-core/test/: README.md  main.cpp  openehr-core.pro  test.pro
openehr-core/test/DvValue_UnitTest/: DvValue_UnitTest.cpp  DvValue_UnitTest.pro
openehr-core/test/rm/RmObject_UnitTest/: RmObject_UnitTest.cpp  RmObject_UnitTest.pro
openehr-core/test/rm/datatypes/basic/DataValue_UnitTest/: DataValue_UnitTest.cpp  DataValue_UnitTest.pro
qtest/RmObject_UnitTest/: RmObject_UnitTest.pro
